--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,6 @@ edition = "2018"
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 log = "0.4.11"
-console_log = "0.2.0"
-console_error_panic_hook = "0.1.6"
 
 [dependencies.web-sys]
 version = "0.3.22"
@@ -24,3 +22,7 @@ features = [
   "ProgressEvent",
   "WebSocket",
 ]
+
+[dev-dependencies]
+console_log = "0.2.0"
+console_error_panic_hook = "0.1.6"
