--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,10 @@ features = [
 [dev-dependencies]
 console_log = "0.2.0"
 console_error_panic_hook = "0.1.6"
+wasm-bindgen-futures = "0.4.19"
+
+[dev-dependencies.web-sys]
+version = "0.3.22"
+features = [
+  "Window",
+]
