--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.11"
+thiserror = "1.0.22"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio-tungstenite = "0.12.0"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
-log = "0.4.11"
-
-[dependencies.web-sys]
-version = "0.3.22"
-features = [
+web-sys = { version = "0.3.22", features = [
   "BinaryType",
   "Blob",
   "ErrorEvent",
@@ -21,15 +24,13 @@ features = [
   "MessageEvent",
   "ProgressEvent",
   "WebSocket",
-]
+] }
 
 [dev-dependencies]
 console_log = "0.2.0"
 console_error_panic_hook = "0.1.6"
 wasm-bindgen-futures = "0.4.19"
-
-[dev-dependencies.web-sys]
-version = "0.3.22"
-features = [
+wasm-bindgen-test = "0.3"
+web-sys = { version = "0.3.22", features = [
   "Window",
-]
+] }
