--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ js-sys = "0.3"
 web-sys = { version = "0.3.22", features = [
   "BinaryType",
   "Blob",
+  "CloseEvent",
   "ErrorEvent",
   "FileReader",
   "MessageEvent",
